@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2001-2002 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001-2003 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -93,15 +93,6 @@ public class Jvc extends DefaultCompilerAdapter {
         // so we'll emulate it for compatibility and convenience.
         classpath.addExtdirs(extdirs);
 
-        if (bootclasspath == null || bootclasspath.size() == 0) {
-            // no bootclasspath, therefore, get one from the java runtime
-            includeJavaRuntime = true;
-        } else {
-            // there is a bootclasspath stated.  By default, the
-            // includeJavaRuntime is false.  If the user has stated a
-            // bootclasspath and said to include the java runtime, it's on
-            // their head!
-        }
         classpath.append(getCompileClasspath());
 
         // jvc has no option for source-path so we
